# scones-synthetic

./: .gitignore  README.md  Results_g2g_2.json  bproj.py  config.py  cpat.py  datasets.py  g2g.py  g2g_exp.py  g2sr.py  gaussian_to_gaussian.py  nets.py  plot_results.py  pyproject.toml  qualitative.py  scones.py  score.py  sinkhorn.py
